ryan gosling is done

--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -28,7 +28,7 @@
 <li> <a href="13bust.html"> BustANutOnTheCoach</a> </li>
 <li> <a href="11rav.html"> Ravenous Bear Cub </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
-<li> <a href="15ryan.html"> Ryan Gosling (not done)</a></li>
+<li> <a href="15ryan.html"> Ryan Gosling </a></li>
 <li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
 
 
@@ -85,7 +85,9 @@ they are together. If they are all wearing matching avaitor shades, they recieve
 <li>BustANutOnTheCoach </li>
 <li>Ravenous Bear Cub </li> 
 <li>Ye Olde Buttcheeks </li> 
-<li>Stinging Gonnorea (sort of)</li> </ul></div>
+<li>Stinging Gonnorea (sort of)</li> 
+<li> Grumio </li>
+<li> JayPee</li></ul></div>
 <img src= "photos/tight.jpg"/>
 <div class="border4main"><p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
 tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned 
