--- a/15ryan.html
+++ b/15ryan.html
@@ -28,7 +28,7 @@
 </ol></div>
 <div class="ryan"><p>
  One of the most unknown, yet most importiant member of the Tightest Crew. Ryan is the one and only driver of any automobile, better yet, anything that runs on gas. Ryan was first introduced as a getaway driver during the 'Meltdown' heist, hauling nuclear explosives to another unknown Russian individual that somehow thought pay to win crates and keys were benificial to the world. Obviously this guy is a new follower of Almir Listo's plan to consume the worlds wallets. </p>
-<p>Back to the point, Ryan can save and secure any individual from a car. He is normally equipped with the defualt 'Tightest Shades' looking rather dapper. Toothpicks have been a part of Ryans life ever since he was ablw to drive, which was out of the womb. Ryan always keeps exactly 3 packets of toothpicks one for this front pocket, one for his back pocket, and the third one is a secret ;). Coinciding with his shades and picks not only does he look cool but looks like he can actually drive to the full extent.</p>
+<p>Back to the point, Ryan can save and secure any individual from a car. He is normally equipped with the defualt 'Tightest Shades' looking rather dapper. Toothpicks have been a part of Ryans life ever since he was able to drive, which was out of the womb. Ryan always keeps exactly 3 packets of toothpicks one for this front pocket, one for his back pocket, and the third one is a secret ;). Coinciding with his shades and picks not only does he look cool but looks like he can actually drive to the full extent.</p>
 
 <p>Even though Ryan is constantly busy, he always makes room to confirm a safe driving experience.</p>
 <ul><li>Age: 34 Years</li>
