--- a/15ryan.html
+++ b/15ryan.html
@@ -34,7 +34,7 @@
 <ul><li>Age: 34 Years</li>
 <li>Location: What are you, a cop?</li>
 <li>Passtime: Driving Cars with 'extreme' precision</li></ul></p>
-<p> Overall, a real human bean and a real hero. </p>
+<p> Truly, a real human bean and a real hero.</p>
 <p> Written by Ye Olde Buttcheeks </p>
 <img src="photos/ryan.jpg">
 </div>
