--- a/6crime.html
+++ b/6crime.html
@@ -24,6 +24,7 @@
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
 <li><a href="15ryan.html"> Ryan Gosling </a> </li>
+<li> <a href="16jaypee.html"> JayPee </a></li>
 <li><a href="final.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="info2"><p><h3> Crimefest is a holiday celebrating the worship of Almir, and the life of Yung Lean. 
