--- a/8thesales.html
+++ b/8thesales.html
@@ -21,6 +21,7 @@
 <li> <a href="13bust.html"> BustANutOnTheCoach </a> </li>
 <li> <a href="14ye olde.html"> Ye Olde Buttcheeks </a></li>
 <li><a href="15ryan.html"> Ryan Gosling </a> </li>
+<li> <a href="16jaypee.html"> JayPee </a></li>
 <li><a href="final.html"> The Final Fuckening </a> </li>
 </ol></div>
 <div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
