--- a/16jaypee.html
+++ b/16jaypee.html
@@ -27,6 +27,7 @@
 <li><a href="16jaypee.html"> JayPee </a></li>
 <li><a href="final.html"> The Final Fuckening </a> </li>
 </ol></div>
-<div class="ryan"><p> JayPee is a real human bean and a member of the tightest crew. He is one of the weakest members of the tightest crew, as he has not gotten his Tightest Crew Shades yet. He is almost there though. He is a master of Unsanitary explosives just like Ye Olde Buttcheeks. He goes by many names. Top Bun, Grumio the African Warlord (not the real grumio ), Kushwacker, Bottom Bun, and many others. He goes by JayPee, Johnny P, or Juan Pedro. </P><p> He is a friend of Yung Lean and knows him very personally. Juan Pedro can't decide on a name. Ripperino. He is a master of Rocket League and is the main technican in the tightest crew.</P>
-</div>
+<div class="ryan"><h3><p> JayPee is a real human bean and a member of the tightest crew. He is one of the weakest members of the tightest crew, as he has not gotten his Tightest Crew Shades yet. He is almost there though. He is a master of Unsanitary explosives just like Ye Olde Buttcheeks. He goes by many names. Top Bun, Grumio the African Warlord (not the real grumio ), Kushwacker, Bottom Bun, and many others. He goes by JayPee, Johnny P, or Juan Pedro. </P><p> He is a friend of Yung Lean and knows him very personally. Juan Pedro can't decide on a name. Ripperino. He is a master of Rocket League and is the main technican in the tightest crew. He is almost to his first infamy. Then he will finally be super tight. He rolls with the tightest crew around, the tightest crew ever. He does not buy much DLC, so he is pretty pure. He is very tight. </P>
+<p> He is faced with a dilemma, he cannot decide on a name. The only constant is JayPee.</p></h3>
+<img src="photos/top.jpg"</div>
 </html>
