--- a/11rav.html
+++ b/11rav.html
@@ -29,7 +29,8 @@
 </ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Ravenous Bear Cub</u></strong></h2> 
-<p> Ravenous Bear Cub is the tightest non-human alive, acompanying Doctor Swifto and BustANutOntheCoach on their travels. He is one of the original tightenites. He is a bear who speaks english for some reason. His name changes constantly. But he remains a bear cub. He will change from Ravenous Bear Cub, Festive Bear Cub, Tight Bear Cub, and such. He is very tight. Acompanying Doctor Swifto since almost the beginning of recorded history. He is one of the first tightenites that followed Yung Lean. He is a faithful companion of Doctor Swifto and has traveled across the land with him. Yung Lean, Doctor Swifto, BustANutOnTheCoach and Ravenous Bear Cub make a very tight crew. </p><p> Rav along with Doctor Swifto and one of the other tightest crew members, form the tightest crew evar. </p>
+<h3><p> Ravenous Bear Cub is the tightest non-human alive, acompanying Doctor Swifto and BustANutOntheCoach on their travels. He is one of the original tightenites. He is a bear who speaks english for some reason. His name changes constantly. But he remains a bear cub. He will change from Ravenous Bear Cub, Festive Bear Cub, Tight Bear Cub, and such. He is very tight. Acompanying Doctor Swifto since almost the beginning of recorded history. He is one of the first tightenites that followed Yung Lean. He is a faithful companion of Doctor Swifto and has traveled across the land with him. Yung Lean, Doctor Swifto, BustANutOnTheCoach and Ravenous Bear Cub make a very tight crew. </p><p> Rav along with Doctor Swifto and one of the other tightest crew members, form the tightest crew evar. </p></h3>
+<img src="photos/rav.jpg">
 </div>
 
 </body>
